@@ -1,12 +1,0 @@
-<!DOCTYPE ACTIONS SYSTEM "actions.dtd">
-
-<ACTIONS>
-	<ACTION NAME="open-viewer-menu-item">
-		<CODE>
-			view.getDockableWindowManager().toggleDockableWindow("projectviewer");
-		</CODE>
-		<IS_SELECTED>
-			return view.getDockableWindowManager().isDockableWindowVisible("projectviewer");
-		</IS_SELECTED>
-	</ACTION>
-</ACTIONS>
