@@ -3,17 +3,18 @@
   
 - use newer icons
   see: jEdit/org/gjt/sp/jedit/icons/
-  Create project : how does a project look like ;-) ?
-  Expand list : ZoomIn.png
-  Contract list : ZoomOut.png
-  Open all : like Open.png, but having two sheets 
-  Add file : New.png / Plus.png
+  Create project : 'Drive.png', how does a project look like ;-) ?
+  Expand list : 'ZoomIn.png'
+  Contract list : 'ZoomOut.png'
+  Open all : like 'Open.png', but having two sheets 
+  Add file : 'New.png' / 'Plus.png'
   Import files :
-  	1.) like New.png, but there pages behin each other
-	2.) like Plus.png, but two of them 
-  Remove file or dir : Minus.png
-  Remove all : like Minus.png, but two of them 
-  Preview in Browser/Viewer : an Eye or a Monitor
+  	1.) like 'New.png', but there pages behind each other
+	2.) like 'Plus.png', but two of them
+	3.) like 'Parse.png' / 'Reload.png', but would more look like refresh
+  Remove file or dir : 'Minus.png'
+  Remove all : like 'Minus.png', but two of them 
+  Preview in Browser/Viewer : 'Run.png' or an Eye or a Monitor
 
 - The file filter (on importing) should be obtained from jEdit
 
@@ -28,7 +29,6 @@
 ---------------------------------------------------------------------------
 
 * Toolbar
-  ** use new RolloverButton class in jEdit 4.1? (for ProjectViewer 1.0.4)
   ** remove "new project" -> add entry to combo-box "new project ..."
   ** remove button "remove all files", but add button "refresh project"
   
