@@ -27,6 +27,9 @@ VERSION 1.0.5
 	- switching views now corectly activates the files too (but makes
 	  projectviewer depended on jedit 4.1)
 	- switching the trees via the tabs, keeps the cur. file active in the trees
+	- removed obsolete action.xml
+	- use new RolloverButton class of jEdit 4.1
+	- use jEdit 4.1 icons
 
 VERSION 1.0.4
   [stefan kost]
